# Flask-Redis-Docker

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
src/calc/: pears_coef_corr.py
src/db/: db.py
src/service/: schemas.py
src/tests/: conftest.py
src/tests/integration/: test_get.py  test_post.py
