[tool.poetry]
name = "flask_redis_docker"
version = "0.1.0"
description = ""
authors = ["ilderebezov <ilderebezov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
redis = "^4.1.0"
pydantic = "^1.9.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
